procedural inference (direct processing and local rules)